<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="ln.intentfilter.MainActivity"
    android:gravity="center">

    <Button
        android:id="@+id/btn_start_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_browser"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btn_start_browserwithlaunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_browsing_with_launch_action" />

    <Button
        android:id="@+id/btn_exception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exceptional_condition"
        android:layout_marginTop="15dp"/>

</LinearLayout>